PlzNavigate: Allow frames to fallback to alternative content.

This CL gives frames the opportunity to show alternative content when
<object data="..."> navigation fails instead of displaying an error
page.

It fixes a collection of tests(see bug description) that fail with the
--enable-browser-side-navigation flag.

BUG=657834

Review-Url: https://codereview.chromium.org/2439903003
Cr-Commit-Position: refs/heads/master@{#430266}

Former-commit-id: bb2aaf9abe13bdd12fbba17fba9901d430057ca0